[tool.poetry]
name = "trading-exchange-sandbox"
version = "0.1.0"
description = "Toy trading exchange + Streamlit UI"
authors = ["Indranil <you@example.com>"]
packages = [{ include = "exchange", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = "^1.30.0"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
